# spotui

./: COMPILATION_FIX_PROGRESS.md  Cargo.toml  LIBRARY_MANAGEMENT_PLAN.md  README.md  fix_broken_dispatch.py  fix_missing_events.sh  fix_startplayback.py  fix_uri_fields.py  test_fields.rs
src/: album_art.rs  app.rs  config.rs  focus_manager.rs  main.rs  network.rs  redirect_uri.rs  simple_main.rs  user_config.rs
src/cli/: clap.rs  cli_app.rs.bak  util.rs
src/event/: events.rs
src/handlers/: album_tracks.rs  artist.rs  artist.rs.bak  artists.rs  basic_view.rs  common_key_events.rs  dialog.rs  empty.rs  episode_table.rs.bak  input.rs  library.rs  log_stream.rs  made_for_you.rs  mod.rs  playbar.rs  playlist.rs  podcasts.rs  recently_played.rs  search_results.rs.bak  select_device.rs  track_table.rs  track_table.rs.bak
src/ui/: audio_analysis.rs  mod.rs  util.rs
