[package]
name = "spotify-tui"
description = "A terminal user interface for Spotify"
homepage = "https://github.com/Rigellute/spotify-tui"
documentation = "https://github.com/Rigellute/spotify-tui"
repository = "https://github.com/Rigellute/spotify-tui"
keywords = ["spotify", "tui", "cli", "terminal"]
categories = ["command-line-utilities"]
version = "0.25.0"
authors = ["Alexander Keliris <rigellute@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rspotify = "0.15"
ratatui = { version = "0.29.0", features = ["crossterm"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
dirs = "5.0"
clap = { version = "3.2", features = ["derive"] }
unicode-width = "0.2"
backtrace = "0.3"
arboard = "3.4"
crossterm = "0.28"
tokio = { version = "1.42", features = ["full"] }
rand = "0.8"
anyhow = "1.0"
futures = "0.3"
chrono = { version = "0.4", features = ["serde"] }
webbrowser = "1.0"


[[bin]]
bench = false
path = "src/main.rs"
name = "spt"
